# bevy_follow_path

./: Cargo.toml  README.md
src/: follow_path2.rs  follow_path3.rs  lib.rs
src/follow_path2/: components.rs  path.rs  plugin.rs  systems.rs  vec2_geo_nd.rs
src/follow_path3/: components.rs  path.rs  plugin.rs  systems.rs  vec3_geo_nd.rs
