[package]
name = "bevy_follow_path"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Provides components and systems that enable entities to follow a path"
homepage = "https://github.com/Beliaar/bevy_follow_path"
repository = "https://github.com/Beliaar/bevy_follow_path"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.0"
euclid = "0.22.7"
bezier-nd = "0.1.4"
geo-nd = "0.1.3"
[features]
debug_draw = []
